testCases/semanticAnalyzerTestCases/correct/arrayIndexs.cs16
/*
     This test var tail
     Author: Chris Kaebe
     Date: Feb 21, 2016
 */

 int main(void){
     int x[5];
     bool b[10];

     x[1] := x[4];

     x[2] := x[2];

     x[3] := x[4];

    if( b[3] )
        x[3] := x[4];

    return 0;
 }