testCases/semanticAnalyzerTestCases/error/typeChecking.cs16
/*
    This tests var name
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(int x){
    int x,y;
    bool b;
    x:=b;
    y:= false                         ; b := y < x ;
    b:= y <= x;
    b:= x;
    b:= y = x;

    b := b < b;
    b := b > b;
    b := b >= b;
    b := b <= b;

    x := b - 1;
    x := b - y;
    x := x;

    b := x * b;
    b := x / b;
    b := x - b;
    b := x + b;

    b := b * b;
    b := b / b;
    b := b + b;
    b := b - b;

    b := y /= x ;
    b := y > x ;
}